--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark shadow-lg bg-dark" style="background-color: rgba(255, 255, 255, 0.144);">
-    <a class="navbar-brand" href="{% url 'home' %}">Brand</a>
+    <a class="navbar-brand" href="{% url 'home' %}">BookWorm</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,13 +8,7 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li> 
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>            
+            </li>         
         </ul>
         <div class="ml-md-auto">
             {% if user.is_authenticated  %}
