--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -9,6 +9,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>         
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'contact' %}">Contact <span class="sr-only">(current)</span></a>
+            </li>         
         </ul>
         <div class="ml-md-auto">
             {% if user.is_authenticated  %}
