--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="row my-5">
                     <div class="col">
-                        Hello, <b>{{ user.username|default:'Guest' }} </b>
+                        Hello, <b>{{ user.username}} </b>
                         
                         
                         
@@ -37,22 +37,57 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 sideimg">
+        <div class="col-sm-4 col-md-4 col-lg-3 sideimg">
             <div class="container">
                 <div class="row">
                     <div class="col my-5">
-                        <div class="card mx-auto">
+                        <div class="card mx-auto ">
                             <div class="card-body">
-                                <h4 class="card-title">Something very cool</h4>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio hic veritatis delectus aliquid pariatur fugit obcaecati, rem ullam laboriosam ipsa nulla. Ea soluta ducimus odio numquam, quasi eveniet nihil maxime.</p>
+                                <h4 class="card-title">Add Your Books</h4>
+                                <p class="card-text">Share your books to world  </p>
+                                <a href="{% url 'contact' %}" class="card-link">Click here</a>
                             </div>
                         </div>
-                        <div class="card mx-auto mt-3">
+                        <div class="card mx-auto mt-1">
                             <div class="card-body">
-                                <h4 class="card-title">Something very cool</h4>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio hic veritatis delectus aliquid pariatur fugit obcaecati, rem ullam laboriosam ipsa nulla. Ea soluta ducimus odio numquam, quasi eveniet nihil maxime.</p>
+                                <h4 class="card-title">View Your Books</h4>
+                                <p class="card-text">Check out your content</p>
+                                <a href="{% url 'contact' %}" class="card-link">Click here</a>
                             </div>
                         </div>
+                        
+                        <ol class="list-group list-group-numbered mt-1">
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">View Profile</div>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Edit Profile</div>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold"><a href="{% url 'password_change' %}">Change Passowrd</a></div>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold"><a href="{% url 'logout' %}">Logout</a></div>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold"><a href="{% url 'contact' %}">Contact us</a></div>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-start">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold"><a href="{% url 'report' %}">Report</a></div>
+                                </div>
+                            </li>
+                        </ol>
                     </div>
                 </div>
             </div>
