--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
        <div class="row">
            <div class="col mx-auto my-5 text-center">
             <h1>Welcome to template website</h1> 
-            <a href="">view books</a>
+            <a href="{% url 'dashboard' %}">view books</a>
            </div>
        </div>
    </div>
