--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -50,7 +50,7 @@
                     <div class="col-12 my-1">
                         <div class="row">
                             <div class="col-md-2 ">
-                                <img class="img-thumbnail" src="{{book.image.url}}" alt="">
+                                <img class="img-thumbnail" width="100%" src="{{book.image.url}}" alt="">
                             </div>
                             <div class="col-md-8 card py-2">
                                 <h3>
@@ -64,7 +64,7 @@
                                     {% endif %}
                                         
                                 </h3>
-                                
+                                <b>{{book.display_genre}}</b>
                                 <p>{{book.author}}</p>
                                 <p>
                                     {{book.summary|truncatechars:150}}
@@ -73,11 +73,14 @@
                             </div>
                             <div class="col-md-2 card  py-2">
                                 <a class="btn btn-primary btn-sm my-1" href="{% url 'book_detail' book.id %}" role="button">View <i class="fa fa-eye" aria-hidden="true"></i></a>
-                                <a class="btn btn-info btn-sm my-1" href="{% url 'book_detail' book.id %}" role="button">Request <i class="fa fa-inbox" aria-hidden="true"></i></a>
+                                
                                 
                                 {% if user == book.user %}
                                 <a class="btn btn-success btn-sm my-1" href="{% url 'share_book' book.id %}" role="button">Share <i class="fa fa-share" aria-hidden="true"></i></a>
+                                <a class="btn btn-success btn-sm my-1" href="{% url 'book_edit' book.id %}" role="button">Edit <i class="fa fa-pencil" aria-hidden="true"></i></a>
                                 <a class="btn btn-danger btn-sm my-1" href="{% url 'book_delete' book.id %}" role="button"> Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
+                                {% else %}
+                                <a class="btn btn-info btn-sm my-1" href="{% url 'book_detail' book.id %}" role="button">Request <i class="fa fa-inbox" aria-hidden="true"></i></a>
                                 {% endif %}
                                 
                             </div>
