--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -8,7 +8,13 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-            </li>         
+            </li>   
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'book_list' %}">Books <span class="sr-only">(current)</span></a>
+            </li>    
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'share_list' %}">Share<span class="sr-only">(current)</span></a>
+            </li>       
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'contact' %}">Contact <span class="sr-only">(current)</span></a>
             </li>         
@@ -16,19 +22,19 @@
         <div class="ml-md-auto">
             {% if user.is_authenticated  %}
             <div class="btn-group">
-                <a class="btn btn-danger" href="{% url 'dashboard' %}">{{user.username}} dashboard</a>
+                <a class="btn btn-danger" href="{% url 'dashboard' %}">{{user.username}}'s dashboard</a>
+                {% if user.is_superuser %}
                 <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="sr-only">Toggle Dropdown</span>
                 </button>
                 <div class="dropdown-menu  dropdown-menu-right">
                     
-                    {% if user.is_superuser %}
                     <a class="dropdown-item" href="{% url 'admin:index' %}">admin services</a>
-                    {% endif %}
-                    <a class="dropdown-item" href="{% url 'password_change' %}"><i class="fa fa-key" aria-hidden="true"></i> change password</a>
-                    <a class="dropdown-item" href="{% url 'logout' %}">logout</a>
+                    
                 </div>
+                {% endif %}
             </div>
+            <a class="btn btn-outline-danger" href="{% url 'logout' %}">Sign out</a>
             {% else %}
             <a class="btn btn-warning nav-link " href="{% url 'login' %}"><i class="fa fa-user-circle" aria-hidden="true"></i> Sign In</a>
             {% endif %}
