--- a/templates/books/add_author.html
+++ b/templates/books/add_author.html
@@ -20,7 +20,7 @@
         <div class="col-sm-12 mx-auto formarea">
             <div class="card " style="background-color: rgb(212, 217, 218);">
                 <div class="card-body">
-                    <h4 class="card-title">Contact form</h4>
+                    <h4 class="card-title">Add Author/h4>
                     <form method="post">
                         {% csrf_token %}
                         {{form|crispy}}
