--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -122,12 +122,12 @@
                         <ol class="list-group list-group-numbered mt-1">
                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                 <div class="ms-2 me-auto">
-                                    <div class="fw-bold">View Profile</div>
+                                    <div class="fw-bold"><a href="{% url 'profile_view' %}">View Profile</a></div>
                                 </div>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-start">
                                 <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Edit Profile</div>
+                                    <div class="fw-bold"><a href="{% url 'profile_edit' %}">Edit Profile</a></div>
                                 </div>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-start">
