--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="{% url 'book_list' %}">Books <span class="sr-only">(current)</span></a>
             </li>    
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'share_list' %}">Share<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'share_list' %}">My Shared<span class="sr-only">(current)</span></a>
             </li>       
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'contact' %}">Contact <span class="sr-only">(current)</span></a>
